--- a/contact-us.html
+++ b/contact-us.html
@@ -24,42 +24,111 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3813440122"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4099980633"/>
-  <link rel="stylesheet" type="text/css" href="css/contact-us.css?crc=3848969052" id="pagesheet"/>
-  <!-- IE-only CSS -->
-  <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_contact-us.css?crc=474743871"/>
-  <![endif]-->
+  <link rel="stylesheet" type="text/css" href="css/contact-us.css?crc=4067268822" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/dosis:n3,n7:default.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/5F_5FABTBJmZ1bpLaSSW6BdJRsq98LeH1NSriS6-mUJfeGXgfOPe9sJGwQwkFDqkFBvtZQ63wQJk5QbtFc935AwtjRqkZcZKFDJXjcbDZ2JXwUG_HKoTjAuC-AZ8jhyuScFGOcNkZkUTjAuC-AZ8jhyuScFGOcNkZkUaiaS0-ABlde8cZAFGiW4R-fozScSKgagzSYgTd1w7f6K4TbJbMg62JM4HgIuuShAbMZ-K75IB.js" type="text/javascript"></script>
+  <!-- Other scripts -->
+  <script type="text/javascript">
+   try {Typekit.load();} catch(e) {}
+</script>
    </head>
  <body>
 
   <div class="clearfix borderbox" id="page"><!-- group -->
-   <div class="browser_width grpelem" id="u5765-bw">
-    <div id="u5765"><!-- group -->
-     <div class="clearfix" id="u5765_align_to_page">
-      <div class="clip_frame grpelem" id="u4112"><!-- image -->
-       <img class="block" id="u4112_img" src="images/life2.png?crc=4143500431" alt="" data-heightwidthratio="0.255" data-image-width="200" data-image-height="51"/>
+   <div class="clearfix grpelem" id="pu5765"><!-- group -->
+    <div class="browser_width grpelem" id="u5765-bw">
+     <div id="u5765"><!-- group -->
+      <div class="clearfix" id="u5765_align_to_page">
+       <div class="clip_frame grpelem" id="u4112"><!-- image -->
+        <img class="block" id="u4112_img" src="images/life2.png?crc=4143500431" alt="" data-heightwidthratio="0.255" data-image-width="200" data-image-height="51"/>
+       </div>
+       <div class="clearfix grpelem" id="u4114-4"><!-- content -->
+        <p id="u4114-2"><span class="Menu-Buttons" id="u4114">ABOUT US</span></p>
+       </div>
+       <a class="nonblock nontext clearfix grpelem" id="u4105-4" href="get-involved.html"><!-- content --><p id="u4105-2"><span class="Menu-Buttons" id="u4105">GET INVOLVED</span></p></a>
+       <a class="nonblock nontext clearfix grpelem" id="u4106-4" href="prayer.html"><!-- content --><p id="u4106-2"><span class="Menu-Buttons" id="u4106">PRAYER</span></p></a>
+       <a class="nonblock nontext clearfix grpelem" id="u4115-4" href="testimony.html"><!-- content --><p id="u4115-2"><span class="Menu-Buttons" id="u4115">TESTIMONY</span></p></a>
+       <a class="nonblock nontext clearfix grpelem" id="u4116-4" href="events.html"><!-- content --><p id="u4116-2"><span class="Menu-Buttons" id="u4116">EVENTS</span></p></a>
+       <a class="nonblock nontext clearfix grpelem" id="u4117-4" href="prayer.html"><!-- content --><p id="u4117-2"><span class="Menu-Buttons" id="u4117">CONTACT</span></p></a>
+       <div class="clearfix grpelem" id="u4107-4"><!-- content -->
+        <p id="u4107-2"><span class="Menu-Buttons" id="u4107">GIVE</span></p>
+       </div>
+       <a class="nonblock nontext clip_frame grpelem" id="u4108" href="https://www.facebook.com/iamlifechurchinternational"><!-- image --><img class="block" id="u4108_img" src="images/facebook-logo-png-white-i6.png?crc=156772510" alt="" data-heightwidthratio="1" data-image-width="31" data-image-height="31"/></a>
+       <a class="nonblock nontext clip_frame grpelem" id="u4110" href="https://www.youtube.com/channel/UC0j6LdYbIiEUvPGAGrfPJlg?"><!-- image --><img class="block" id="u4110_img" src="images/youtube.png?crc=394888956" alt="" data-heightwidthratio="1" data-image-width="30" data-image-height="30"/></a>
       </div>
-      <div class="clearfix grpelem" id="u4114-4"><!-- content -->
-       <p id="u4114-2"><span class="Menu-Buttons" id="u4114">ABOUT US</span></p>
-      </div>
-      <a class="nonblock nontext clearfix grpelem" id="u4105-4" href="get-involved.html"><!-- content --><p id="u4105-2"><span class="Menu-Buttons" id="u4105">GET INVOLVED</span></p></a>
-      <a class="nonblock nontext clearfix grpelem" id="u4106-4" href="prayer.html"><!-- content --><p id="u4106-2"><span class="Menu-Buttons" id="u4106">PRAYER</span></p></a>
-      <a class="nonblock nontext clearfix grpelem" id="u4115-4" href="testimony.html"><!-- content --><p id="u4115-2"><span class="Menu-Buttons" id="u4115">TESTIMONY</span></p></a>
-      <a class="nonblock nontext clearfix grpelem" id="u4116-4" href="events.html"><!-- content --><p id="u4116-2"><span class="Menu-Buttons" id="u4116">EVENTS</span></p></a>
-      <a class="nonblock nontext clearfix grpelem" id="u4117-4" href="prayer.html"><!-- content --><p id="u4117-2"><span class="Menu-Buttons" id="u4117">CONTACT</span></p></a>
-      <a class="nonblock nontext clearfix grpelem" id="u4107-4" href="give.html"><!-- content --><p id="u4107-2"><span class="Menu-Buttons" id="u4107">GIVE</span></p></a>
-      <a class="nonblock nontext clip_frame grpelem" id="u4108" href="https://www.facebook.com/iamlifechurchinternational"><!-- image --><img class="block" id="u4108_img" src="images/facebook-logo-png-white-i6.png?crc=156772510" alt="" data-heightwidthratio="1" data-image-width="31" data-image-height="31"/></a>
-      <a class="nonblock nontext clip_frame grpelem" id="u4110" href="https://www.youtube.com/channel/UC0j6LdYbIiEUvPGAGrfPJlg?"><!-- image --><img class="block" id="u4110_img" src="images/youtube.png?crc=394888956" alt="" data-heightwidthratio="1" data-image-width="30" data-image-height="30"/></a>
      </div>
     </div>
+    <div class="browser_width grpelem" id="u8883-bw">
+     <div id="u8883"><!-- column -->
+      <div class="clearfix" id="u8883_align_to_page">
+       <div class="clip_frame colelem" id="u8911"><!-- image -->
+        <img class="block" id="u8911_img" src="images/contact1.png?crc=116441227" alt="" data-heightwidthratio="0.37037037037037035" data-image-width="351" data-image-height="130"/>
+       </div>
+       <div class="clearfix colelem" id="pu8886"><!-- group -->
+        <div class="grpelem" id="u8886"><!-- custom html -->
+         <iframe src="https://services.cognitoforms.com/f/noEjlAXGEUGuRGotf2QwQg?id=4" style="position:relative;width:1px;min-width:100%;*width:100%;" frameborder="0" scrolling="yes" seamless="seamless" height="661" width="100%"></iframe>
+<script src="https://services.cognitoforms.com/scripts/embed.js"></script>
+
+
+
+
+        </div>
+        <div class="grpelem" id="u8890"><!-- simple frame --></div>
+        <div class="clearfix grpelem" id="u8893-12"><!-- content -->
+         <p id="u8893-2">Life Church International</p>
+         <p id="u8893-4">620 Brentwood Drive East</p>
+         <p id="u8893-6">Nashville, TN 37211</p>
+         <p id="u8893-7">&nbsp;</p>
+         <p id="u8893-9">IAmLifeChurch@gmail.com</p>
+         <p>&nbsp;</p>
+        </div>
+        <div class="clip_frame grpelem" id="u8904"><!-- image -->
+         <img class="block" id="u8904_img" src="images/img9536561-crop-u8904.jpg?crc=338739062" alt="" data-heightwidthratio="0.371900826446281" data-image-width="363" data-image-height="135"/>
+        </div>
+       </div>
+       <div class="colelem" id="u8851"><!-- custom html -->
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1613.0197347789197!2d-86.71535964279866!3d36.043742607668364!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8864702777345095%3A0xd32f350109a252c2!2s620+Brentwood+Dr+E%2C+Nashville%2C+TN+37211!5e0!3m2!1sen!2sus!4v1546239936894" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+       </div>
+       <div class="size_fixed colelem" id="u8965" data-sizePolicy="fixed" data-pintopage="page_fluidx"><!-- custom html -->
+        
+    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+    <input type="hidden" name="cmd" value="_donations">
+    <input type="hidden" name="business" value="IAmLifeChurch@gmail.com">
+    <input type="hidden" name="lc" value="US">
+    <input type="hidden" name="item_name" value="Donation">
+    <input type="hidden" name="no_note" value="0">
+    <input type="hidden" name="currency_code" value="USD">
+    <input type="hidden" name="bn" value="Adobe_SP_Muse">
+    <input type="image" src="assets/give3.png" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+    <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+    </form>
+
+       </div>
+      </div>
+     </div>
+    </div>
+    <div class="clip_frame grpelem" id="u8844"><!-- image -->
+     <img class="block" id="u8844_img" src="images/aboutbkgrnd-crop-u8844.jpg?crc=4168072555" alt="" data-heightwidthratio="0.055162659123055166" data-image-width="1414" data-image-height="78"/>
+    </div>
+    <a class="nonblock nontext clearfix grpelem" id="u8670-4" href="get-involved.html"><!-- content --><p id="u8670-2"><span class="Menu-Buttons" id="u8670">GET INVOLVED</span></p></a>
+    <a class="nonblock nontext clearfix grpelem" id="u8671-4" href="prayer.html"><!-- content --><p id="u8671-2"><span class="Menu-Buttons" id="u8671">PRAYER</span></p></a>
+    <div class="clearfix grpelem" id="u8672-4"><!-- content -->
+     <p id="u8672-2"><span class="Menu-Buttons" id="u8672">GIVE</span></p>
+    </div>
+    <a class="nonblock nontext clip_frame grpelem" id="u8673" href="https://www.facebook.com/iamlifechurchinternational"><!-- image --><img class="block" id="u8673_img" src="images/facebook-logo-png-white-i6.png?crc=156772510" alt="" data-heightwidthratio="1" data-image-width="31" data-image-height="31"/></a>
+    <a class="nonblock nontext clip_frame grpelem" id="u8675" href="https://www.youtube.com/channel/UC0j6LdYbIiEUvPGAGrfPJlg?"><!-- image --><img class="block" id="u8675_img" src="images/youtube.png?crc=394888956" alt="" data-heightwidthratio="1" data-image-width="30" data-image-height="30"/></a>
+    <a class="nonblock nontext clip_frame grpelem" id="u8677" href="index.html"><!-- image --><img class="block" id="u8677_img" src="images/life2.png?crc=4143500431" alt="" data-heightwidthratio="0.255" data-image-width="200" data-image-height="51"/></a>
+    <a class="nonblock nontext clearfix grpelem" id="u8679-4" href="about-us.html"><!-- content --><p id="u8679-2"><span class="Menu-Buttons" id="u8679">ABOUT US</span></p></a>
+    <a class="nonblock nontext clearfix grpelem" id="u8680-4" href="testimony.html"><!-- content --><p id="u8680-2"><span class="Menu-Buttons" id="u8680">TESTIMONY</span></p></a>
+    <a class="nonblock nontext clearfix grpelem" id="u8681-4" href="events.html"><!-- content --><p id="u8681-2"><span class="Menu-Buttons" id="u8681">EVENTS</span></p></a>
+    <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u8682-4" href="contact-us.html"><!-- content --><p id="u8682-2"><span class="Menu-Buttons" id="u8682">CONTACT</span></p></a>
    </div>
-   <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="442" data-content-below-spacer="52" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="1584" data-content-above-spacer="1583" data-content-below-spacer="51" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    <div class="browser_width grpelem" id="u3077-bw">
     <div id="u3077"><!-- group -->
      <div class="clearfix" id="u3077_align_to_page">
