--- a/events.html
+++ b/events.html
@@ -24,10 +24,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3813440122"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4099980633"/>
-  <link rel="stylesheet" type="text/css" href="css/events.css?crc=3848969052" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/events.css?crc=3880787069" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_events.css?crc=474743871"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_events.css?crc=224340184"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -42,24 +42,58 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
    <div class="browser_width grpelem" id="u5765-bw">
     <div id="u5765"><!-- group -->
      <div class="clearfix" id="u5765_align_to_page">
-      <div class="clip_frame grpelem" id="u4112"><!-- image -->
-       <img class="block" id="u4112_img" src="images/life2.png?crc=4143500431" alt="" data-heightwidthratio="0.255" data-image-width="200" data-image-height="51"/>
+      <div class="clearfix grpelem" id="pu4112"><!-- group -->
+       <div class="clip_frame grpelem" id="u4112"><!-- image -->
+        <img class="block" id="u4112_img" src="images/life2.png?crc=4143500431" alt="" data-heightwidthratio="0.255" data-image-width="200" data-image-height="51"/>
+       </div>
+       <a class="nonblock nontext clip_frame grpelem" id="u8719" href="index.html"><!-- image --><img class="block" id="u8719_img" src="images/life2.png?crc=4143500431" alt="" data-heightwidthratio="0.255" data-image-width="200" data-image-height="51"/></a>
       </div>
-      <div class="clearfix grpelem" id="u4114-4"><!-- content -->
-       <p id="u4114-2"><span class="Menu-Buttons" id="u4114">ABOUT US</span></p>
+      <div class="clearfix grpelem" id="pu4114-4"><!-- group -->
+       <div class="clearfix grpelem" id="u4114-4"><!-- content -->
+        <p id="u4114-2"><span class="Menu-Buttons" id="u4114">ABOUT US</span></p>
+       </div>
+       <a class="nonblock nontext clearfix grpelem" id="u8721-4" href="about-us.html"><!-- content --><p id="u8721-2"><span class="Menu-Buttons" id="u8721">ABOUT US</span></p></a>
       </div>
-      <a class="nonblock nontext clearfix grpelem" id="u4105-4" href="get-involved.html"><!-- content --><p id="u4105-2"><span class="Menu-Buttons" id="u4105">GET INVOLVED</span></p></a>
-      <a class="nonblock nontext clearfix grpelem" id="u4106-4" href="prayer.html"><!-- content --><p id="u4106-2"><span class="Menu-Buttons" id="u4106">PRAYER</span></p></a>
-      <a class="nonblock nontext clearfix grpelem" id="u4115-4" href="testimony.html"><!-- content --><p id="u4115-2"><span class="Menu-Buttons" id="u4115">TESTIMONY</span></p></a>
-      <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u4116-4" href="events.html"><!-- content --><p id="u4116-2"><span class="Menu-Buttons" id="u4116">EVENTS</span></p></a>
-      <a class="nonblock nontext clearfix grpelem" id="u4117-4" href="prayer.html"><!-- content --><p id="u4117-2"><span class="Menu-Buttons" id="u4117">CONTACT</span></p></a>
-      <a class="nonblock nontext clearfix grpelem" id="u4107-4" href="give.html"><!-- content --><p id="u4107-2"><span class="Menu-Buttons" id="u4107">GIVE</span></p></a>
-      <a class="nonblock nontext clip_frame grpelem" id="u4108" href="https://www.facebook.com/iamlifechurchinternational"><!-- image --><img class="block" id="u4108_img" src="images/facebook-logo-png-white-i6.png?crc=156772510" alt="" data-heightwidthratio="1" data-image-width="31" data-image-height="31"/></a>
-      <a class="nonblock nontext clip_frame grpelem" id="u4110" href="https://www.youtube.com/channel/UC0j6LdYbIiEUvPGAGrfPJlg?"><!-- image --><img class="block" id="u4110_img" src="images/youtube.png?crc=394888956" alt="" data-heightwidthratio="1" data-image-width="30" data-image-height="30"/></a>
+      <div class="clearfix grpelem" id="pu4105-4"><!-- group -->
+       <a class="nonblock nontext clearfix grpelem" id="u4105-4" href="get-involved.html"><!-- content --><p id="u4105-2"><span class="Menu-Buttons" id="u4105">GET INVOLVED</span></p></a>
+       <a class="nonblock nontext clearfix grpelem" id="u8712-4" href="get-involved.html"><!-- content --><p id="u8712-2"><span class="Menu-Buttons" id="u8712">GET INVOLVED</span></p></a>
+      </div>
+      <div class="clearfix grpelem" id="pu4106-4"><!-- group -->
+       <a class="nonblock nontext clearfix grpelem" id="u4106-4" href="prayer.html"><!-- content --><p id="u4106-2"><span class="Menu-Buttons" id="u4106">PRAYER</span></p></a>
+       <a class="nonblock nontext clearfix grpelem" id="u8713-4" href="prayer.html"><!-- content --><p id="u8713-2"><span class="Menu-Buttons" id="u8713">PRAYER</span></p></a>
+      </div>
+      <div class="clearfix grpelem" id="pu4115-4"><!-- group -->
+       <a class="nonblock nontext clearfix grpelem" id="u4115-4" href="testimony.html"><!-- content --><p id="u4115-2"><span class="Menu-Buttons" id="u4115">TESTIMONY</span></p></a>
+       <a class="nonblock nontext clearfix grpelem" id="u8722-4" href="testimony.html"><!-- content --><p id="u8722-2"><span class="Menu-Buttons" id="u8722">TESTIMONY</span></p></a>
+      </div>
+      <div class="clearfix grpelem" id="pu4116-4"><!-- group -->
+       <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u4116-4" href="events.html"><!-- content --><p id="u4116-2"><span class="Menu-Buttons" id="u4116">EVENTS</span></p></a>
+       <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u8723-4" href="events.html"><!-- content --><p id="u8723-2"><span class="Menu-Buttons" id="u8723">EVENTS</span></p></a>
+      </div>
+      <div class="clearfix grpelem" id="pu4117-4"><!-- group -->
+       <a class="nonblock nontext clearfix grpelem" id="u4117-4" href="prayer.html"><!-- content --><p id="u4117-2"><span class="Menu-Buttons" id="u4117">CONTACT</span></p></a>
+       <a class="nonblock nontext clearfix grpelem" id="u8724-4" href="contact-us.html"><!-- content --><p id="u8724-2"><span class="Menu-Buttons" id="u8724">CONTACT</span></p></a>
+      </div>
+      <div class="clearfix grpelem" id="pu4107-4"><!-- group -->
+       <div class="clearfix grpelem" id="u4107-4"><!-- content -->
+        <p id="u4107-2"><span class="Menu-Buttons" id="u4107">GIVE</span></p>
+       </div>
+       <div class="clearfix grpelem" id="u8714-4"><!-- content -->
+        <p id="u8714-2"><span class="Menu-Buttons" id="u8714">GIVE</span></p>
+       </div>
+      </div>
+      <div class="clearfix grpelem" id="pu4108"><!-- group -->
+       <a class="nonblock nontext clip_frame grpelem" id="u4108" href="https://www.facebook.com/iamlifechurchinternational"><!-- image --><img class="block" id="u4108_img" src="images/facebook-logo-png-white-i6.png?crc=156772510" alt="" data-heightwidthratio="1" data-image-width="31" data-image-height="31"/></a>
+       <a class="nonblock nontext clip_frame grpelem" id="u8715" href="https://www.facebook.com/iamlifechurchinternational"><!-- image --><img class="block" id="u8715_img" src="images/facebook-logo-png-white-i6.png?crc=156772510" alt="" data-heightwidthratio="1" data-image-width="31" data-image-height="31"/></a>
+      </div>
+      <div class="clearfix grpelem" id="pu4110"><!-- group -->
+       <a class="nonblock nontext clip_frame grpelem" id="u4110" href="https://www.youtube.com/channel/UC0j6LdYbIiEUvPGAGrfPJlg?"><!-- image --><img class="block" id="u4110_img" src="images/youtube.png?crc=394888956" alt="" data-heightwidthratio="1" data-image-width="30" data-image-height="30"/></a>
+       <a class="nonblock nontext clip_frame grpelem" id="u8717" href="https://www.youtube.com/channel/UC0j6LdYbIiEUvPGAGrfPJlg?"><!-- image --><img class="block" id="u8717_img" src="images/youtube.png?crc=394888956" alt="" data-heightwidthratio="1" data-image-width="30" data-image-height="30"/></a>
+      </div>
      </div>
     </div>
    </div>
-   <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="442" data-content-below-spacer="52" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="71" data-content-above-spacer="442" data-content-below-spacer="52" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    <div class="browser_width grpelem" id="u3077-bw">
     <div id="u3077"><!-- group -->
      <div class="clearfix" id="u3077_align_to_page">
