--- a/prayer.html
+++ b/prayer.html
@@ -24,14 +24,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3813440122"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4099980633"/>
-  <link rel="stylesheet" type="text/css" href="css/prayer.css?crc=3961502948" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/prayer.css?crc=3849594325" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/dosis:n3,n7:default.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/ik/wnhFEPBbXvfzk4G-O1RqgnFS8XDTOuFsrb8jF-vJHCMfeGXgfOPe9sJGwQwkFDqkFBvtZQ63wQJk5QbtFc935AwtjRqkZcZKFDJXjcbDZ2JXwUG_HKoTjAuC-AZ8jhyuScFGOcNkZkUTjAuC-AZ8jhyuScFGOcNkZkUaiaS0-ABlde8cZAFGiW4R-fozScSKgagzSYgTd1w7f6K4TbJbMg62JM4HgIuuShAbMpfUT0IB.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/tlbJ_6h-Bbvf-9_dULFRLPmOwOr-zaon01xZQpboAFSfeGXgfOPe9sJGwQwkFDqkFBvtZQ63wQJk5QbtFc935AwtjRqkZcZKFDJXjcbDZ2JXwUG_HKoTjAuC-AZ8jhyuScFGOcNkZkUTjAuC-AZ8jhyuScFGOcNkZkUaiaS0-ABlde8cZAFGiW4R-fozScSKgagzSYgTd1w7f6K4TbJbMg62JM4HgIuuShAbMZHK75IB.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -55,29 +55,31 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <a class="nonblock nontext clearfix grpelem" id="u4115-4" href="testimony.html"><!-- content --><p id="u4115-2"><span class="Menu-Buttons" id="u4115">TESTIMONY</span></p></a>
        <a class="nonblock nontext clearfix grpelem" id="u4116-4" href="events.html"><!-- content --><p id="u4116-2"><span class="Menu-Buttons" id="u4116">EVENTS</span></p></a>
        <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u4117-4" href="prayer.html"><!-- content --><p id="u4117-2"><span class="Menu-Buttons" id="u4117">CONTACT</span></p></a>
-       <a class="nonblock nontext clearfix grpelem" id="u4107-4" href="give.html"><!-- content --><p id="u4107-2"><span class="Menu-Buttons" id="u4107">GIVE</span></p></a>
+       <div class="clearfix grpelem" id="u4107-4"><!-- content -->
+        <p id="u4107-2"><span class="Menu-Buttons" id="u4107">GIVE</span></p>
+       </div>
        <a class="nonblock nontext clip_frame grpelem" id="u4108" href="https://www.facebook.com/iamlifechurchinternational"><!-- image --><img class="block" id="u4108_img" src="images/facebook-logo-png-white-i6.png?crc=156772510" alt="" data-heightwidthratio="1" data-image-width="31" data-image-height="31"/></a>
        <a class="nonblock nontext clip_frame grpelem" id="u4110" href="https://www.youtube.com/channel/UC0j6LdYbIiEUvPGAGrfPJlg?"><!-- image --><img class="block" id="u4110_img" src="images/youtube.png?crc=394888956" alt="" data-heightwidthratio="1" data-image-width="30" data-image-height="30"/></a>
       </div>
      </div>
     </div>
     <div class="clip_frame grpelem" id="u6317"><!-- image -->
-     <img class="block" id="u6317_img" src="images/prayer.jpg?crc=3808031762" alt="" data-heightwidthratio="0.6666666666666666" data-image-width="1437" data-image-height="958"/>
+     <img class="block" id="u6317_img" src="images/prayer.jpg?crc=3827827844" alt="" data-heightwidthratio="0.6666666666666666" data-image-width="1437" data-image-height="958"/>
     </div>
     <a class="nonblock nontext clearfix grpelem" id="u6192-4" href="get-involved.html"><!-- content --><p id="u6192-2"><span class="Menu-Buttons" id="u6192">GET INVOLVED</span></p></a>
     <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u6193-4" href="prayer.html"><!-- content --><p id="u6193-2"><span class="Menu-Buttons" id="u6193">PRAYER</span></p></a>
-    <a class="nonblock nontext clearfix grpelem" id="u6194-4" href="give.html"><!-- content --><p id="u6194-2"><span class="Menu-Buttons" id="u6194">GIVE</span></p></a>
+    <div class="clearfix grpelem" id="u6194-4"><!-- content -->
+     <p id="u6194-2"><span class="Menu-Buttons" id="u6194">GIVE</span></p>
+    </div>
     <a class="nonblock nontext clip_frame grpelem" id="u6195" href="https://www.facebook.com/iamlifechurchinternational"><!-- image --><img class="block" id="u6195_img" src="images/facebook-logo-png-white-i6.png?crc=156772510" alt="" data-heightwidthratio="1" data-image-width="31" data-image-height="31"/></a>
     <a class="nonblock nontext clip_frame grpelem" id="u6197" href="https://www.youtube.com/channel/UC0j6LdYbIiEUvPGAGrfPJlg?"><!-- image --><img class="block" id="u6197_img" src="images/youtube.png?crc=394888956" alt="" data-heightwidthratio="1" data-image-width="30" data-image-height="30"/></a>
     <a class="nonblock nontext clip_frame grpelem" id="u6199" href="index.html"><!-- image --><img class="block" id="u6199_img" src="images/life2.png?crc=4143500431" alt="" data-heightwidthratio="0.255" data-image-width="200" data-image-height="51"/></a>
-    <div class="clearfix grpelem" id="u6201-4"><!-- content -->
-     <p id="u6201-2"><span class="Menu-Buttons" id="u6201">ABOUT US</span></p>
-    </div>
+    <a class="nonblock nontext clearfix grpelem" id="u6201-4" href="about-us.html"><!-- content --><p id="u6201-2"><span class="Menu-Buttons" id="u6201">ABOUT US</span></p></a>
     <a class="nonblock nontext clearfix grpelem" id="u6202-4" href="testimony.html"><!-- content --><p id="u6202-2"><span class="Menu-Buttons" id="u6202">TESTIMONY</span></p></a>
     <a class="nonblock nontext clearfix grpelem" id="u6203-4" href="events.html"><!-- content --><p id="u6203-2"><span class="Menu-Buttons" id="u6203">EVENTS</span></p></a>
-    <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u6204-4" href="prayer.html"><!-- content --><p id="u6204-2"><span class="Menu-Buttons" id="u6204">CONTACT</span></p></a>
+    <a class="nonblock nontext clearfix grpelem" id="u6204-4" href="contact-us.html"><!-- content --><p id="u6204-2"><span class="Menu-Buttons" id="u6204">CONTACT</span></p></a>
     <div class="grpelem" id="u6338"><!-- custom html -->
-     <iframe src="https://services.cognitoforms.com/f/noEjlAXGEUGuRGotf2QwQg?id=1" style="position:relative;width:1px;min-width:100%;*width:100%;" frameborder="0" scrolling="yes" seamless="seamless" height="527" width="100%"></iframe>
+     <iframe src="https://services.cognitoforms.com/f/noEjlAXGEUGuRGotf2QwQg?id=1" style="position:relative;width:1px;min-width:100%;*width:100%;" frameborder="0" scrolling="yes" seamless="seamless" height="529" width="100%"></iframe>
 <script src="https://services.cognitoforms.com/scripts/embed.js"></script>
 
 
@@ -88,8 +90,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="clearfix grpelem" id="u6355-4"><!-- content -->
      <p>Let us pray for you. Submit your request below and let the power of prayer impact your life.</p>
     </div>
+    <div class="grpelem" id="u8901"><!-- simple frame --></div>
    </div>
-   <div class="verticalspacer" data-offset-top="964" data-content-above-spacer="963" data-content-below-spacer="51" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="968" data-content-above-spacer="967" data-content-below-spacer="51" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    <div class="clearfix grpelem" id="pu6345"><!-- column -->
     <div class="clip_frame colelem" id="u6345"><!-- image -->
      <img class="block" id="u6345_img" src="images/prayerrequest.png?crc=522103938" alt="" data-heightwidthratio="0.30648330058939094" data-image-width="509" data-image-height="156"/>
