--- a/testimony.html
+++ b/testimony.html
@@ -24,52 +24,86 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3813440122"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4099980633"/>
-  <link rel="stylesheet" type="text/css" href="css/testimony.css?crc=3848969052" id="pagesheet"/>
-  <!-- IE-only CSS -->
-  <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_testimony.css?crc=474743871"/>
-  <![endif]-->
+  <link rel="stylesheet" type="text/css" href="css/testimony.css?crc=4046148001" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/dosis:n3,n7:default.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/Hmonsoq4jHzNN_8y9W3lipUExCnKeQ098-uKd6EuZAjfeGXgfOPe9sJGwQwkFDqkFBvtZQ63wQJk5QbtFc935AwtjRqkZcZKFDJXjcbDZ2JXwUG_HKoTjAuC-AZ8jhyuScFGOcNkZkUTjAuC-AZ8jhyuScFGOcNkZkUaiaS0-ABlde8cZAFGiW4R-fozScSKgagzSYgTd1w7f6K4TbJbMg62JM4HgIuuShAbMZ5K75IB.js" type="text/javascript"></script>
+  <!-- Other scripts -->
+  <script type="text/javascript">
+   try {Typekit.load();} catch(e) {}
+</script>
    </head>
  <body>
 
   <div class="clearfix borderbox" id="page"><!-- group -->
-   <div class="browser_width grpelem" id="u5765-bw">
-    <div id="u5765"><!-- group -->
-     <div class="clearfix" id="u5765_align_to_page">
-      <div class="clip_frame grpelem" id="u4112"><!-- image -->
-       <img class="block" id="u4112_img" src="images/life2.png?crc=4143500431" alt="" data-heightwidthratio="0.255" data-image-width="200" data-image-height="51"/>
+   <div class="clearfix grpelem" id="pu5765"><!-- group -->
+    <div class="browser_width grpelem" id="u5765-bw">
+     <div id="u5765"><!-- group -->
+      <div class="clearfix" id="u5765_align_to_page">
+       <div class="clip_frame grpelem" id="u4112"><!-- image -->
+        <img class="block" id="u4112_img" src="images/life2.png?crc=4143500431" alt="" data-heightwidthratio="0.255" data-image-width="200" data-image-height="51"/>
+       </div>
+       <div class="clearfix grpelem" id="u4114-4"><!-- content -->
+        <p id="u4114-2"><span class="Menu-Buttons" id="u4114">ABOUT US</span></p>
+       </div>
+       <a class="nonblock nontext clearfix grpelem" id="u4105-4" href="get-involved.html"><!-- content --><p id="u4105-2"><span class="Menu-Buttons" id="u4105">GET INVOLVED</span></p></a>
+       <a class="nonblock nontext clearfix grpelem" id="u4106-4" href="prayer.html"><!-- content --><p id="u4106-2"><span class="Menu-Buttons" id="u4106">PRAYER</span></p></a>
+       <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u4115-4" href="testimony.html"><!-- content --><p id="u4115-2"><span class="Menu-Buttons" id="u4115">TESTIMONY</span></p></a>
+       <a class="nonblock nontext clearfix grpelem" id="u4116-4" href="events.html"><!-- content --><p id="u4116-2"><span class="Menu-Buttons" id="u4116">EVENTS</span></p></a>
+       <a class="nonblock nontext clearfix grpelem" id="u4117-4" href="prayer.html"><!-- content --><p id="u4117-2"><span class="Menu-Buttons" id="u4117">CONTACT</span></p></a>
+       <div class="clearfix grpelem" id="u4107-4"><!-- content -->
+        <p id="u4107-2"><span class="Menu-Buttons" id="u4107">GIVE</span></p>
+       </div>
+       <a class="nonblock nontext clip_frame grpelem" id="u4108" href="https://www.facebook.com/iamlifechurchinternational"><!-- image --><img class="block" id="u4108_img" src="images/facebook-logo-png-white-i6.png?crc=156772510" alt="" data-heightwidthratio="1" data-image-width="31" data-image-height="31"/></a>
+       <a class="nonblock nontext clip_frame grpelem" id="u4110" href="https://www.youtube.com/channel/UC0j6LdYbIiEUvPGAGrfPJlg?"><!-- image --><img class="block" id="u4110_img" src="images/youtube.png?crc=394888956" alt="" data-heightwidthratio="1" data-image-width="30" data-image-height="30"/></a>
       </div>
-      <div class="clearfix grpelem" id="u4114-4"><!-- content -->
-       <p id="u4114-2"><span class="Menu-Buttons" id="u4114">ABOUT US</span></p>
-      </div>
-      <a class="nonblock nontext clearfix grpelem" id="u4105-4" href="get-involved.html"><!-- content --><p id="u4105-2"><span class="Menu-Buttons" id="u4105">GET INVOLVED</span></p></a>
-      <a class="nonblock nontext clearfix grpelem" id="u4106-4" href="prayer.html"><!-- content --><p id="u4106-2"><span class="Menu-Buttons" id="u4106">PRAYER</span></p></a>
-      <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u4115-4" href="testimony.html"><!-- content --><p id="u4115-2"><span class="Menu-Buttons" id="u4115">TESTIMONY</span></p></a>
-      <a class="nonblock nontext clearfix grpelem" id="u4116-4" href="events.html"><!-- content --><p id="u4116-2"><span class="Menu-Buttons" id="u4116">EVENTS</span></p></a>
-      <a class="nonblock nontext clearfix grpelem" id="u4117-4" href="prayer.html"><!-- content --><p id="u4117-2"><span class="Menu-Buttons" id="u4117">CONTACT</span></p></a>
-      <a class="nonblock nontext clearfix grpelem" id="u4107-4" href="give.html"><!-- content --><p id="u4107-2"><span class="Menu-Buttons" id="u4107">GIVE</span></p></a>
-      <a class="nonblock nontext clip_frame grpelem" id="u4108" href="https://www.facebook.com/iamlifechurchinternational"><!-- image --><img class="block" id="u4108_img" src="images/facebook-logo-png-white-i6.png?crc=156772510" alt="" data-heightwidthratio="1" data-image-width="31" data-image-height="31"/></a>
-      <a class="nonblock nontext clip_frame grpelem" id="u4110" href="https://www.youtube.com/channel/UC0j6LdYbIiEUvPGAGrfPJlg?"><!-- image --><img class="block" id="u4110_img" src="images/youtube.png?crc=394888956" alt="" data-heightwidthratio="1" data-image-width="30" data-image-height="30"/></a>
      </div>
     </div>
+    <div class="clip_frame grpelem" id="u8633"><!-- image -->
+     <img class="block" id="u8633_img" src="images/testimony.jpg?crc=153966630" alt="" data-heightwidthratio="0.6666666666666666" data-image-width="1401" data-image-height="934"/>
+    </div>
+    <a class="nonblock nontext clearfix grpelem" id="u8591-4" href="get-involved.html"><!-- content --><p id="u8591-2"><span class="Menu-Buttons" id="u8591">GET INVOLVED</span></p></a>
+    <a class="nonblock nontext clearfix grpelem" id="u8592-4" href="prayer.html"><!-- content --><p id="u8592-2"><span class="Menu-Buttons" id="u8592">PRAYER</span></p></a>
+    <div class="clearfix grpelem" id="u8593-4"><!-- content -->
+     <p id="u8593-2"><span class="Menu-Buttons" id="u8593">GIVE</span></p>
+    </div>
+    <a class="nonblock nontext clip_frame grpelem" id="u8594" href="https://www.facebook.com/iamlifechurchinternational"><!-- image --><img class="block" id="u8594_img" src="images/facebook-logo-png-white-i6.png?crc=156772510" alt="" data-heightwidthratio="1" data-image-width="31" data-image-height="31"/></a>
+    <a class="nonblock nontext clip_frame grpelem" id="u8596" href="https://www.youtube.com/channel/UC0j6LdYbIiEUvPGAGrfPJlg?"><!-- image --><img class="block" id="u8596_img" src="images/youtube.png?crc=394888956" alt="" data-heightwidthratio="1" data-image-width="30" data-image-height="30"/></a>
+    <a class="nonblock nontext clip_frame grpelem" id="u8598" href="index.html"><!-- image --><img class="block" id="u8598_img" src="images/life2.png?crc=4143500431" alt="" data-heightwidthratio="0.255" data-image-width="200" data-image-height="51"/></a>
+    <a class="nonblock nontext clearfix grpelem" id="u8600-4" href="about-us.html"><!-- content --><p id="u8600-2"><span class="Menu-Buttons" id="u8600">ABOUT US</span></p></a>
+    <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u8601-4" href="testimony.html"><!-- content --><p id="u8601-2"><span class="Menu-Buttons" id="u8601">TESTIMONY</span></p></a>
+    <a class="nonblock nontext clearfix grpelem" id="u8602-4" href="events.html"><!-- content --><p id="u8602-2"><span class="Menu-Buttons" id="u8602">EVENTS</span></p></a>
+    <a class="nonblock nontext clearfix grpelem" id="u8603-4" href="contact-us.html"><!-- content --><p id="u8603-2"><span class="Menu-Buttons" id="u8603">CONTACT</span></p></a>
+    <div class="clearfix grpelem" id="u8653-4"><!-- content -->
+     <p>Declare the greatness of our God and share your testimony of what God has done in your life.&nbsp; Submit your powerful testimony below.</p>
+    </div>
+    <div class="grpelem" id="u8656"><!-- custom html -->
+     <iframe src="https://services.cognitoforms.com/f/noEjlAXGEUGuRGotf2QwQg?id=3" style="position:relative;width:1px;min-width:100%;*width:100%;" frameborder="0" scrolling="yes" seamless="seamless" height="573" width="100%"></iframe>
+<script src="https://services.cognitoforms.com/scripts/embed.js"></script>
+
+    </div>
+    <div class="grpelem" id="u8896"><!-- simple frame --></div>
    </div>
-   <div class="verticalspacer" data-offset-top="0" data-content-above-spacer="442" data-content-below-spacer="52" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
-   <div class="browser_width grpelem" id="u3077-bw">
-    <div id="u3077"><!-- group -->
-     <div class="clearfix" id="u3077_align_to_page">
-      <div class="clearfix grpelem" id="u3080-6"><!-- content -->
-       <p id="u3080-2">Life Church International&nbsp;&nbsp;&nbsp;&nbsp; 2019</p>
-       <p id="u3080-3">&nbsp;</p>
-       <p>&nbsp;</p>
-      </div>
-      <div class="clip_frame grpelem" id="u3333"><!-- image -->
-       <img class="block" id="u3333_img" src="images/copyright.png?crc=3973042440" alt="" data-heightwidthratio="1" data-image-width="13" data-image-height="13"/>
+   <div class="verticalspacer" data-offset-top="945" data-content-above-spacer="944" data-content-below-spacer="51" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="clearfix grpelem" id="pu8660"><!-- column -->
+    <div class="clip_frame colelem" id="u8660"><!-- image -->
+     <img class="block" id="u8660_img" src="images/sharetestimony.png?crc=227946769" alt="" data-heightwidthratio="0.22431259044862517" data-image-width="691" data-image-height="155"/>
+    </div>
+    <div class="browser_width colelem" id="u3077-bw">
+     <div id="u3077"><!-- group -->
+      <div class="clearfix" id="u3077_align_to_page">
+       <div class="clearfix grpelem" id="u3080-6"><!-- content -->
+        <p id="u3080-2">Life Church International&nbsp;&nbsp;&nbsp;&nbsp; 2019</p>
+        <p id="u3080-3">&nbsp;</p>
+        <p>&nbsp;</p>
+       </div>
+       <div class="clip_frame grpelem" id="u3333"><!-- image -->
+        <img class="block" id="u3333_img" src="images/copyright.png?crc=3973042440" alt="" data-heightwidthratio="1" data-image-width="13" data-image-height="13"/>
+       </div>
       </div>
      </div>
     </div>
