--- a/get-involved.html
+++ b/get-involved.html
@@ -24,14 +24,14 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=3813440122"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4099980633"/>
-  <link rel="stylesheet" type="text/css" href="css/get-involved.css?crc=3932197359" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/get-involved.css?crc=3883025441" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/dosis:n3,n7:default.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/ik/wnhFEPBbXvfzk4G-O1RqgnFS8XDTOuFsrb8jF-vJHCMfeGXgfOPe9sJGwQwkFDqkFBvtZQ63wQJk5QbtFc935AwtjRqkZcZKFDJXjcbDZ2JXwUG_HKoTjAuC-AZ8jhyuScFGOcNkZkUTjAuC-AZ8jhyuScFGOcNkZkUaiaS0-ABlde8cZAFGiW4R-fozScSKgagzSYgTd1w7f6K4TbJbMg62JM4HgIuuShAbMpfUT0IB.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/txggOShKsXrtKL2s4sTdxStUjdylglh4fRA4xbaJKdvfeTqgfOPe9sJGwQwkFDqkFBvtZQ63wQJk5QbtFc935AwtjRqkZcZKFDJXjcbDZ2JXwUG_HKoTjAuC-AZ8jhyuScFGOcNkZkUTjAuC-AZ8jhyuScFGOcNkZkUaiaS0-ABlde8cZAFGiW4R-fozScSKgagzSYgTd1w7f6KbTbJbMg6eJMJ7f6K4TbJbMg62JM4HgIuuShAbMZeK75IB.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -40,52 +40,83 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
  <body>
 
   <div class="clearfix borderbox" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="pu5765"><!-- group -->
-    <div class="browser_width grpelem" id="u5765-bw">
-     <div id="u5765"><!-- group -->
-      <div class="clearfix" id="u5765_align_to_page">
-       <div class="clip_frame grpelem" id="u4112"><!-- image -->
-        <img class="block" id="u4112_img" src="images/life2.png?crc=4143500431" alt="" data-heightwidthratio="0.255" data-image-width="200" data-image-height="51"/>
+   <div class="clearfix grpelem" id="ppu5765"><!-- column -->
+    <div class="clearfix colelem" id="pu5765"><!-- group -->
+     <div class="browser_width grpelem" id="u5765-bw">
+      <div id="u5765"><!-- group -->
+       <div class="clearfix" id="u5765_align_to_page">
+        <div class="clip_frame grpelem" id="u4112"><!-- image -->
+         <img class="block" id="u4112_img" src="images/life2.png?crc=4143500431" alt="" data-heightwidthratio="0.255" data-image-width="200" data-image-height="51"/>
+        </div>
+        <div class="clearfix grpelem" id="u4114-4"><!-- content -->
+         <p id="u4114-2"><span class="Menu-Buttons" id="u4114">ABOUT US</span></p>
+        </div>
+        <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u4105-4" href="get-involved.html"><!-- content --><p id="u4105-2"><span class="Menu-Buttons" id="u4105">GET INVOLVED</span></p></a>
+        <a class="nonblock nontext clearfix grpelem" id="u4106-4" href="prayer.html"><!-- content --><p id="u4106-2"><span class="Menu-Buttons" id="u4106">PRAYER</span></p></a>
+        <a class="nonblock nontext clearfix grpelem" id="u4115-4" href="testimony.html"><!-- content --><p id="u4115-2"><span class="Menu-Buttons" id="u4115">TESTIMONY</span></p></a>
+        <a class="nonblock nontext clearfix grpelem" id="u4116-4" href="events.html"><!-- content --><p id="u4116-2"><span class="Menu-Buttons" id="u4116">EVENTS</span></p></a>
+        <a class="nonblock nontext clearfix grpelem" id="u4117-4" href="prayer.html"><!-- content --><p id="u4117-2"><span class="Menu-Buttons" id="u4117">CONTACT</span></p></a>
+        <div class="clearfix grpelem" id="u4107-4"><!-- content -->
+         <p id="u4107-2"><span class="Menu-Buttons" id="u4107">GIVE</span></p>
+        </div>
+        <a class="nonblock nontext clip_frame grpelem" id="u4108" href="https://www.facebook.com/iamlifechurchinternational"><!-- image --><img class="block" id="u4108_img" src="images/facebook-logo-png-white-i6.png?crc=156772510" alt="" data-heightwidthratio="1" data-image-width="31" data-image-height="31"/></a>
+        <a class="nonblock nontext clip_frame grpelem" id="u4110" href="https://www.youtube.com/channel/UC0j6LdYbIiEUvPGAGrfPJlg?"><!-- image --><img class="block" id="u4110_img" src="images/youtube.png?crc=394888956" alt="" data-heightwidthratio="1" data-image-width="30" data-image-height="30"/></a>
        </div>
-       <div class="clearfix grpelem" id="u4114-4"><!-- content -->
-        <p id="u4114-2"><span class="Menu-Buttons" id="u4114">ABOUT US</span></p>
-       </div>
-       <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u4105-4" href="get-involved.html"><!-- content --><p id="u4105-2"><span class="Menu-Buttons" id="u4105">GET INVOLVED</span></p></a>
-       <a class="nonblock nontext clearfix grpelem" id="u4106-4" href="prayer.html"><!-- content --><p id="u4106-2"><span class="Menu-Buttons" id="u4106">PRAYER</span></p></a>
-       <a class="nonblock nontext clearfix grpelem" id="u4115-4" href="testimony.html"><!-- content --><p id="u4115-2"><span class="Menu-Buttons" id="u4115">TESTIMONY</span></p></a>
-       <a class="nonblock nontext clearfix grpelem" id="u4116-4" href="events.html"><!-- content --><p id="u4116-2"><span class="Menu-Buttons" id="u4116">EVENTS</span></p></a>
-       <a class="nonblock nontext clearfix grpelem" id="u4117-4" href="prayer.html"><!-- content --><p id="u4117-2"><span class="Menu-Buttons" id="u4117">CONTACT</span></p></a>
-       <a class="nonblock nontext clearfix grpelem" id="u4107-4" href="give.html"><!-- content --><p id="u4107-2"><span class="Menu-Buttons" id="u4107">GIVE</span></p></a>
-       <a class="nonblock nontext clip_frame grpelem" id="u4108" href="https://www.facebook.com/iamlifechurchinternational"><!-- image --><img class="block" id="u4108_img" src="images/facebook-logo-png-white-i6.png?crc=156772510" alt="" data-heightwidthratio="1" data-image-width="31" data-image-height="31"/></a>
-       <a class="nonblock nontext clip_frame grpelem" id="u4110" href="https://www.youtube.com/channel/UC0j6LdYbIiEUvPGAGrfPJlg?"><!-- image --><img class="block" id="u4110_img" src="images/youtube.png?crc=394888956" alt="" data-heightwidthratio="1" data-image-width="30" data-image-height="30"/></a>
       </div>
      </div>
-    </div>
-    <div class="clip_frame grpelem" id="u6062"><!-- image -->
-     <img class="block" id="u6062_img" src="images/getinvolved3.png?crc=515800022" alt="" data-heightwidthratio="0.49304029304029307" data-image-width="1365" data-image-height="673"/>
-    </div>
-    <div class="clearfix grpelem" id="u6144"><!-- group -->
-     <div class="basic clearfix grpelem" id="u6147-4"><!-- content -->
-      <p>The ministry opportunities at Life Church International allow you to get involved in your church and community. If you are interested in volunteering to serve and minister with us please sign up below.</p>
+     <div class="clip_frame grpelem" id="u6062"><!-- image -->
+      <img class="block" id="u6062_img" src="images/getinvolved4.png?crc=4169788944" alt="" data-heightwidthratio="0.48557353976073186" data-image-width="1421" data-image-height="690"/>
      </div>
+     <div class="browser_width grpelem" id="u6144-bw">
+      <div id="u6144"><!-- group -->
+       <div class="clearfix" id="u6144_align_to_page">
+        <div class="basic clearfix grpelem" id="u6147-6"><!-- content -->
+         <p id="u6147-2">Ministry Opportunities</p>
+         <p>The ministry opportunities at Life Church International allow you to get involved in your church and community. If you are interested in volunteering to serve and minister with us please sign up below.</p>
+        </div>
+       </div>
+      </div>
+     </div>
+     <div class="grpelem" id="u8978"><!-- simple frame --></div>
+     <a class="nonblock nontext clearfix grpelem" id="u6151-4" href="prayer.html"><!-- content --><p id="u6151-2"><span class="Menu-Buttons" id="u6151">PRAYER</span></p></a>
+     <div class="clearfix grpelem" id="u6152-4"><!-- content -->
+      <p id="u6152-2"><span class="Menu-Buttons" id="u6152">GIVE</span></p>
+     </div>
+     <a class="nonblock nontext clip_frame grpelem" id="u6153" href="https://www.facebook.com/iamlifechurchinternational"><!-- image --><img class="block" id="u6153_img" src="images/facebook-logo-png-white-i6.png?crc=156772510" alt="" data-heightwidthratio="1" data-image-width="31" data-image-height="31"/></a>
+     <a class="nonblock nontext clip_frame grpelem" id="u6155" href="https://www.youtube.com/channel/UC0j6LdYbIiEUvPGAGrfPJlg?"><!-- image --><img class="block" id="u6155_img" src="images/youtube.png?crc=394888956" alt="" data-heightwidthratio="1" data-image-width="30" data-image-height="30"/></a>
+     <a class="nonblock nontext clip_frame grpelem" id="u6157" href="index.html"><!-- image --><img class="block" id="u6157_img" src="images/life2.png?crc=4143500431" alt="" data-heightwidthratio="0.255" data-image-width="200" data-image-height="51"/></a>
+     <a class="nonblock nontext clearfix grpelem" id="u6159-4" href="about-us.html"><!-- content --><p id="u6159-2"><span class="Menu-Buttons" id="u6159">ABOUT US</span></p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u6160-4" href="testimony.html"><!-- content --><p id="u6160-2"><span class="Menu-Buttons" id="u6160">TESTIMONY</span></p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u6161-4" href="events.html"><!-- content --><p id="u6161-2"><span class="Menu-Buttons" id="u6161">EVENTS</span></p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u6162-4" href="contact-us.html"><!-- content --><p id="u6162-2"><span class="Menu-Buttons" id="u6162">CONTACT</span></p></a>
+     <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u7888-4" href="get-involved.html"><!-- content --><p id="u7888-2"><span class="Menu-Buttons" id="u7888">GET INVOLVED</span></p></a>
     </div>
-    <a class="nonblock nontext clearfix grpelem" id="u6151-4" href="prayer.html"><!-- content --><p id="u6151-2"><span class="Menu-Buttons" id="u6151">PRAYER</span></p></a>
-    <a class="nonblock nontext clearfix grpelem" id="u6152-4" href="give.html"><!-- content --><p id="u6152-2"><span class="Menu-Buttons" id="u6152">GIVE</span></p></a>
-    <a class="nonblock nontext clip_frame grpelem" id="u6153" href="https://www.facebook.com/iamlifechurchinternational"><!-- image --><img class="block" id="u6153_img" src="images/facebook-logo-png-white-i6.png?crc=156772510" alt="" data-heightwidthratio="1" data-image-width="31" data-image-height="31"/></a>
-    <a class="nonblock nontext clip_frame grpelem" id="u6155" href="https://www.youtube.com/channel/UC0j6LdYbIiEUvPGAGrfPJlg?"><!-- image --><img class="block" id="u6155_img" src="images/youtube.png?crc=394888956" alt="" data-heightwidthratio="1" data-image-width="30" data-image-height="30"/></a>
-    <a class="nonblock nontext clip_frame grpelem" id="u6157" href="index.html"><!-- image --><img class="block" id="u6157_img" src="images/life2.png?crc=4143500431" alt="" data-heightwidthratio="0.255" data-image-width="200" data-image-height="51"/></a>
-    <a class="nonblock nontext clearfix grpelem" id="u6159-4" href="about-us.html"><!-- content --><p id="u6159-2"><span class="Menu-Buttons" id="u6159">ABOUT US</span></p></a>
-    <a class="nonblock nontext clearfix grpelem" id="u6160-4" href="testimony.html"><!-- content --><p id="u6160-2"><span class="Menu-Buttons" id="u6160">TESTIMONY</span></p></a>
-    <a class="nonblock nontext clearfix grpelem" id="u6161-4" href="events.html"><!-- content --><p id="u6161-2"><span class="Menu-Buttons" id="u6161">EVENTS</span></p></a>
-    <a class="nonblock nontext clearfix grpelem" id="u6162-4" href="prayer.html"><!-- content --><p id="u6162-2"><span class="Menu-Buttons" id="u6162">CONTACT</span></p></a>
+    <div class="clearfix colelem" id="pu8419"><!-- group -->
+     <div class="grpelem" id="u8419"><!-- custom html -->
+      <iframe src="https://services.cognitoforms.com/f/noEjlAXGEUGuRGotf2QwQg?id=6" style="position:relative;width:1px;min-width:100%;*width:100%;" frameborder="0" scrolling="yes" seamless="seamless" height="576" width="100%"></iframe>
+<script src="https://services.cognitoforms.com/scripts/embed.js"></script>
+
+
+
+
+
+
+
+
+
+
+
+     </div>
+     <div class="grpelem" id="u9225"><!-- simple frame --></div>
+    </div>
    </div>
-   <div id="u7888-4-wrapper">
-    <a class="nonblock nontext MuseLinkActive clearfix" id="u7888-4" href="get-involved.html"><!-- content --><p id="u7888-2"><span class="Menu-Buttons" id="u7888">GET INVOLVED</span></p></a>
-   </div>
-   <div class="verticalspacer" data-offset-top="685" data-content-above-spacer="685" data-content-below-spacer="51" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <div class="verticalspacer" data-offset-top="1371" data-content-above-spacer="1370" data-content-below-spacer="51" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
    <div class="clearfix grpelem" id="pu6128"><!-- column -->
     <div class="clip_frame colelem" id="u6128"><!-- image -->
      <img class="block" id="u6128_img" src="images/getinvolved2.png?crc=302453151" alt="" data-heightwidthratio="0.3219954648526077" data-image-width="441" data-image-height="142"/>
+    </div>
+    <div class="clip_frame colelem" id="u9000"><!-- image -->
+     <img class="block" id="u9000_img" src="images/minister.png?crc=4228110032" alt="" data-heightwidthratio="0.24067164179104478" data-image-width="536" data-image-height="129"/>
     </div>
     <div class="browser_width colelem" id="u3077-bw">
      <div id="u3077"><!-- group -->
